# ustat

./: .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  MANUAL.md  README.md  USAGE.md  docker-compose.yml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml  release.yml  security-scan.yml
Wiz3 arayüz iyileştirmesi/: .thumbnail  uSTAT.dc.html
backend/: desktop_main.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt
backend/middleware/: security_headers.py
backend/routers/: _models_shared.py  advanced_anova.py  agreement.py  article_parser.py  bayesian.py  categorical.py  causal.py  causal_sem.py  charts.py  compute.py  decision_curve.py  diagnostics.py  factor.py  meta.py  missing_data.py  ml.py  model_compare.py  models.py  (+18 more)
docs/: IMPROVEMENT_OPPORTUNITIES.md  ROADMAP_advanced_features.md  SPEC.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
macos/: ustat_launcher.py
qa/: CODEX_WORK_PACKAGES.md  FIX_PLAN.md  TEST_PLAN.md  audit_grok_composer.py  codex_deep_checks.py  codex_model_audit.py  grok_build_audit.py  kimi_audit.py  probe_grok_composer.py  run_via_testclient.py  verify2_grok_composer.py  verify3_grok_composer.py  verify_grok_composer.py
scripts/: build_macos_pkg.sh  figure4_unadjusted_vs_adjusted_HR.py  manual-screenshots.mjs  ustat-backend.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/splash/: index.html
src-tauri/src/: lib.rs  main.rs
(+287 files in other folders)
